--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "svelte-components-starter",
+  "name": "svmarkdown",
   "type": "module",
   "version": "0.0.0",
-  "description": "A starter for creating a Svelte component library.",
-  "author": "Author Name <author.name@mail.com>",
+  "description": "Runtime markdown renderer for Svelte based on markdown-it and AST blocks.",
+  "author": "grtsinry43",
   "license": "MIT",
-  "homepage": "https://github.com/author/library#readme",
+  "homepage": "https://github.com/grtsinry43/svmarkdown#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/author/library.git"
+    "url": "git+https://github.com/grtsinry43/svmarkdown.git"
   },
   "bugs": {
-    "url": "https://github.com/author/library/issues"
+    "url": "https://github.com/grtsinry43/svmarkdown/issues"
   },
   "exports": {
     ".": "./dist/index.js",
@@ -30,7 +30,7 @@
     "build": "tsdown",
     "dev": "tsdown --watch",
     "play": "vite",
-    "test": "vitest",
+    "test": "vitest run",
     "typecheck": "svelte-check --tsconfig ./tsconfig.json",
     "release": "bumpp && pnpm publish",
     "prepublishOnly": "pnpm run build"
@@ -41,6 +41,8 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tsconfig/svelte": "^5.0.6",
+    "@types/markdown-it": "^14.1.2",
+    "@types/markdown-it-container": "^4.0.0",
     "@types/node": "^25.0.3",
     "@vitest/browser-playwright": "^4.0.16",
     "bumpp": "^10.3.2",
@@ -54,5 +56,9 @@
     "vite": "^7.3.0",
     "vitest": "^4.0.16",
     "vitest-browser-svelte": "^2.0.1"
+  },
+  "dependencies": {
+    "markdown-it": "^14.1.0",
+    "markdown-it-container": "^4.0.0"
   }
 }
