--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "url": "https://github.com/grtsinry43/svmarkdown/issues"
   },
   "exports": {
-    ".": "./dist/index.js",
+    ".": {
+      "svelte": "./src/index.ts",
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
     "./package.json": "./package.json"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "svelte": "./src/index.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "publishConfig": {
     "access": "public"
